--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cloud-garden",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Simply sensor handling",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/sun-labs/cloudgarden-npm#readme",
   "devDependencies": {
     "standard": "^16.0.3"
+  },
+  "dependencies": {
+    "cloud-garden": "^1.0.1"
   }
 }
