--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sun-labs/cloudgarden-npm#readme",
   "devDependencies": {
+    "jest": "^26.6.3",
     "standard": "^16.0.3"
   },
   "dependencies": {
