--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simply sensor handling",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest ./tests/"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,5 @@
   "devDependencies": {
     "jest": "^26.6.3",
     "standard": "^16.0.3"
-  },
-  "dependencies": {
-    "cloud-garden": "^1.0.1"
   }
 }
